--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ blog/migrations/0002_post_category.py
 blog/migrations/0003_comment.py
 blog/migrations/0004_auto_20170517_1608.py
 blog/migrations/0006_auto_20170517_1619.py
+blog/migrations/0005_auto_20170517_1616.py
