--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ blog/migrations/0004_auto_20170517_1608.py
 blog/migrations/0006_auto_20170517_1619.py
 blog/migrations/0005_auto_20170517_1616.py
 blog/migrations/
+.idea/workspace.xml
+.idea/workspace.xml
